--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,49 @@
 .border{border-radius:25px; 
-	border:10px solid;
-border-color: green}
+	border:5px solid;
+border-color: white}
+.fontcolourwhite{font-style:white;}
+
+	a{color:white;}
+
+	head {color:white;}
+
+	body
+
+	{padding:20px;
+	background-color: black;
+	font-family: 'Crimson Text', serif;}
+
+	nav{padding-left:0px;
+	padding-right:10px;
+	padding-top:10px;
+	padding-bottom:10px;
+	margin-bottom:10px;
+	}
 
 
-h1{
+	h1{
 	font-size:50px;
-margin:5px
-}
+	margin:5px
+	padding-left:0px;
+	padding-top:10px;
+	padding-bottom: 10px;
+	padding-right: 10px
+	}
 
-h2{
-	color: green;}
+	h2{
+	color: white;}
+
+	h3
+	{color:white;}
+
+	p
+	{color:white;}
+
+	ul
+	{color:white;}
+
+	ol
+	{color:white;}
+
 
 
